For a documentation of all features, see http://semantic-mediawiki.org


== SMW 1.7 ==

* Added native "internal objects" that can be set using #setobject.
* Added support for selecting a default graph when using RDF stores,
  configuration called $smwgSparqlDefaultGraph
* Use of native MediaWiki sortable tables for the table formats.
* Added value distribution functionality that can be used by result formats. 
* Added definitions for missing params (sort, order, searchlabel) to the base query printer.
* Added validation and manipulation of the format paremeter using Validator.
* Added class parameter to the table format which allows setting the css class. 
* Added alpha version of native SMW Ask API with moudles ask and askargs.
* Added setting to choose which optional special properties are enabled ($smwgPageSpecialProperties).
* Added creation date special property (disabled by default) (bug 32165).
* Added support for altitudes in geographic coordinates (bug 32698).
* Dropped compatibility with MediaWiki 1.15.x (and earlier).
* Dropped compatibility with old-style (SMW < 1.6) query printers.
* Fixed separator and filename parameters for the DSV format.
* Fixed display of properties of type URL (bug 30912).
* Fixed hide query functionality on Special:Ask (bug 30768).
* Fixed display of internal SMW helper constants in certain queries (bug 30969).
* Fixed some issues with the category result format (including bug 30761).
* Fixed email validation issue (bug 32295).
* Fixed incorrect handling of sort and order parameters on Special:Ask (bug 32706).
* Fixed several more issues not listed here.

== SMW 1.6.1 ==

Released on August 20, 2011.

* #ask queries now allow printouts (table columns) that are exactly the same.
  In previous versions, multiple printouts with the same label would be
  collapsed (e.g. {{#ask: [[Catgegory:City]] |?|?|?}} now shows four columns).
* Fixed continue and limit escaping issues on Special:Ask. 