@@ -3,6 +3,11 @@ For a documentation of all features, see http://semantic-mediawiki.org
 
 == SMW 1.7 ==
 
+THIS IS NOT A RELEASE YET
+
+Semantic MediaWiki 1.7 is currently in beta-quality and is not recommended for use in
+production untill the actual release.
+
 * Added native "internal objects" that can be set using #setobject.
 * Added support for selecting a default graph when using RDF stores,
   configuration called $smwgSparqlDefaultGraph
